syntax = "proto3";

package applications.v1;

option java_multiple_files = true;
option java_outer_classname = "Workflows";

message StartUserRegistrationsRequest {
  string name = 1;
}

message StartApplicationRequest {
  string user_id = 1;
  string ssn = 2;
  string birthdate = 3;
}